test/corpus/assignments.txt
========================
Binary assignment - +=
========================

{{ 10 += 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - -=
========================

{{ 10 -= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - *=
========================

{{ 10 *= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - /=
========================

{{ 10 += 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - %=
========================

{{ 10 %= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - &=
========================

{{ 10 &= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - ^=
========================

{{ 10 ^= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - |=
========================

{{ 10 |= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - **=
========================

{{ 10 **= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - <<=
========================

{{ 10 <<= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - >>=
========================

{{ 10 >>= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - ||=
========================

{{ 10 ||= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - &&=
========================

{{ 10 &&= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - ??=
========================

{{ 10 ??= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))

========================
Binary assignment - >>>=
========================

{{ 10 >>>= 3 }}

---

(document
 (interpolation
  (binary_expression
    (expression
     (identifier))
    (expression
     (identifier)))))
