test/corpus/identifier-trivia.txt
============
Identifier with hyphen
============

@if (a-foo > b) {
  <p>a is greater than b</p>
}

---

(document
 (if_statement
  (control_keyword)
  condition: (if_condition
    (binary_expression
     left: (expression
       (identifier))
     right: (binary_expression
       left: (expression
         (identifier))
       right: (expression
         (identifier)))))
     consequence: (statement_block
       (element
        (start_tag
         (tag_name))
        (text)
        (end_tag
         (tag_name))))))
